fix nav spacing

--- a/app/assets/styles/global/_navs.scss
+++ b/app/assets/styles/global/_navs.scss
@@ -21,6 +21,7 @@
   line-height: 1rem;
   display: inline-flex;
   padding: $global-spacing;
+  padding-right: $global-spacing * 2;
   margin: 0;
 }
 
